# parseq

./: .gitignore  bench.py  check_augment.ipynb  hubconf.py  inference.py  pyproject.toml  read.py  setup.py  test.py  train.py  tune.py
configs/: main.yaml
configs/model/: parseq.yaml
strhub/data/: augment.py  dataset.py  module.py  tokenizer.py  utils.py
strhub/models/: base.py  modules.py  utils.py
strhub/models/abinet/: model.py  resnet.py  system.py
strhub/models/crnn/: model.py  system.py
strhub/models/parseq/: modules.py  system.py
strhub/models/trba/: feature_extraction.py  model.py  prediction.py  system.py
strhub/models/vitstr/: system.py
tests/: __init__.py  conftest.py  test_dataset.py  test_label_file.py  test_tokenizer.py
tests/assets/: abgl_chrset.csv
tests/assets/dataset/annotations/0000/: 000000003.json  000000004.json
tools/: coco_2_converter.py  create_lmdb_dataset.py  filter_lmdb.py  lsvt_converter.py  openvino_converter.py  test_abinet_lm_acc.py  textocr_converter.py
